--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "url": "https://github.com/bsingr/mastermind/issues"
   },
   "homepage": "https://github.com/bsingr/mastermind#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.2",
+    "react-dnd-touch-backend": "^0.2.4"
+  },
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
